[metadata]
name = MultiTrain
version = 1.0.0
author = Shittu Samson
author_email = tunexo885@gmail.com
maintainer = Shittu Samson
maintainer_email = tunex885@gmail.com
description = MultiTrain is a user-friendly tool that lets you train several machine learning models at once on your dataset, helping you easily find the best model for your needs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = multitrain, multi, train, MultiTrain, multiclass, classifier, automl, AutoML, train multiple models
url = https://github.com/LOVE-DOCTOR/MultiTrain
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    catboost>=1.2.7,<1.3.0
    imbalanced-learn>=0.13.0,<0.14.0
    lightgbm>=4.5.0,<4.6.0
    setuptools>=75.8.0,<76.0.0
    matplotlib>=3.10.0,<3.11.0
    numpy>=1.26.4,<1.27.0
    pandas>=2.2.3,<2.3.0
    plotly>=6.0.0,<6.1.0
    pytest>=8.3.4,<8.4.0
    scikit-learn>=1.6.1,<1.7.0
    scipy>=1.13.1,<1.14.0
    seaborn>=0.13.2,<0.14.0
    xgboost>=1.6.2,<1.7.0
    tqdm>=4.64.0,<4.65.0
    ipython>=8.32.0,<8.33.0


[options.packages.find]
include =
    MultiTrain
    MultiTrain.test
    MultiTrain.utils
    MultiTrain.errors
    MultiTrain.regression
    MultiTrain.classification
