[metadata]
name = MultiTrain
version = 1.1.1
author = Shittu Samson
author_email = tunexo885@gmail.com
maintainer = Shittu Samson
maintainer_email = tunex885@gmail.com
description = MultiTrain is a user-friendly tool that lets you train several machine learning models at once on your dataset, helping you easily find the best model for your needs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = multitrain, multi, train, MultiTrain, multiclass, classifier, automl, AutoML, train multiple models
url = https://github.com/LOVE-DOCTOR/MultiTrain
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    catboost>=1.2.7,<1.3.0
    lightgbm>=4.5.0,<4.6.0
    setuptools
    jupyter==1.1.1
    ipywidgets==8.0.2
    matplotlib>=3.7.1,<3.9.4
    pandas>=2.0.0,<2.0.3
    plotly>=6.0.0,<6.1.0
    pytest>=8.3.4,<8.4.0
    scikit-learn==1.3.2
    seaborn>=0.13.2,<0.14.0
    xgboost>=1.7.0,<2.1.0
    tqdm>=4.64.0,<4.65.0
    ipython>=8.10.0,<8.18.1
    
[options]
install_requires =
    scikit-learn-intelex==2025.1.0
    --extra-index-url https://pypi.intel.com/ai



[options.packages.find]
include =
    MultiTrain
    MultiTrain.test
    MultiTrain.utils
    MultiTrain.errors
    MultiTrain.regression
    MultiTrain.classification
